add new feature about write log

--- a/config/config.ini
+++ b/config/config.ini
@@ -1,6 +1,6 @@
 [replaceconfig]
-    sourcePath = D:\Test\CompData\20200629\500_cleanup_nonmember\7_Cleanup_ByWeili
+    sourcePath = D:\Test
     fileType = .sql
     oldString = 136
     newString = 133
-    isProcessSubDir = true
+    isProcessSubDir = false
